--- a/metadata.yaml
+++ b/metadata.yaml
@@ -48,5 +48,6 @@ subjects:
 - !lcsh 'Great Britain -- Fiction'
 - !lcsh 'Science fiction'
 - !lcsh 'Political fiction'
+- GITenberg
 title: 'The King''s Men: A Tale of To-morrow'
 url: http://www.gutenberg.org/ebooks/18960
